[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/ui/popup_out_of_moves.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/ad_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/popup_play_again_button.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/popup_watch_ad_button.png" type="Texture" id=4]
[ext_resource path="res://source/nodes/popup_with_background.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/resources/fonts/header_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://source/resources/fonts/title_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://source/resources/fonts/digits_small_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/fonts/roboto/Roboto-Medium.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://source/scripts/ui/popup_end_game.gd" type="Script" id=10]
[ext_resource path="res://assets/images/ui/popup_watch_ad_button_disabled.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 530, 680 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PopupEndGame" instance=ExtResource( 5 )]
script = ExtResource( 10 )
_watch_ad_config_enabled = [ ExtResource( 4 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
_watch_ad_config_disabled = [ ExtResource( 11 ), Color( 0.870588, 0.870588, 0.870588, 1 ), Color( 0.776471, 0.776471, 0.776471, 1 ) ]

[node name="PopupDialog" parent="." index="1"]
margin_left = -265.0
margin_top = -340.0
margin_right = 265.0
margin_bottom = 340.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true

[node name="Label" type="Label" parent="PopupDialog" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -299.0
margin_right = 137.5
margin_bottom = -244.0
custom_fonts/font = ExtResource( 6 )
text = "KEY_OUT_OF_MOVES"
align = 1

[node name="VBoxContainer" parent="PopupDialog" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -203.0
margin_right = 250.0
margin_bottom = 287.0
custom_constants/separation = 40
alignment = 2

[node name="VBoxScore" type="VBoxContainer" parent="PopupDialog/VBoxContainer" index="0"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 250 )
custom_constants/separation = -10
alignment = 1

[node name="FinalScore" type="Label" parent="PopupDialog/VBoxContainer/VBoxScore" index="0"]
margin_top = 32.0
margin_right = 500.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 2 )
text = "245"
align = 1
valign = 1
clip_text = true

[node name="ScoreLabel" type="Label" parent="PopupDialog/VBoxContainer/VBoxScore" index="1"]
margin_top = 173.0
margin_right = 500.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 7 )
text = "KEY_SCORE"
align = 1

[node name="NewHighscoreLabel" type="Label" parent="PopupDialog/VBoxContainer/VBoxScore" index="2"]
visible = false
margin_top = 190.0
margin_right = 500.0
margin_bottom = 235.0
custom_colors/font_color = Color( 0.945098, 0.733333, 0.0627451, 1 )
custom_fonts/font = ExtResource( 7 )
text = "KEY_NEW_HIGHSCORE"
align = 1

[node name="VBoxButtons" type="VBoxContainer" parent="PopupDialog/VBoxContainer" index="1"]
margin_top = 308.0
margin_right = 500.0
margin_bottom = 490.0
custom_constants/separation = 10

[node name="NewGameButton" type="Button" parent="PopupDialog/VBoxContainer/VBoxButtons" index="0"]
margin_right = 500.0
margin_bottom = 86.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/focus = SubResource( 3 )
text = "KEY_PLAY_AGAIN"
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="WatchAdButton" type="Button" parent="PopupDialog/VBoxContainer/VBoxButtons" index="1"]
margin_top = 96.0
margin_right = 500.0
margin_bottom = 182.0
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="TextureRect" type="TextureRect" parent="PopupDialog/VBoxContainer/VBoxButtons/WatchAdButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 83.0
margin_right = -369.0
rect_min_size = Vector2( 48, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer/VBoxButtons/WatchAdButton" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
text = "KEY_WATCH_AD"
align = 1
valign = 1
